k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dezignspiration-frontend
  labels:
    app: dezignspiration-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
  selector:
    app: dezignspiration-frontend
  type: NodePort
